# GradeSchoolMathSolver-RAG

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  QUALITY_IMPROVEMENTS.md  README.md  __init__.py  answer_tracker.py  config.py  database.py  docker-compose.yml  example.py  llama_interface.py  main.py  models.py  problem_generator.py  pyproject.toml  rag_retrieval.py  requirements.txt  setup.cfg  setup.py  start.sh  test_api_client.py  test_basic.py
.github/workflows/: ci.yml  docker-publish.yml  milestone-tag.yml  pypi-publish.yml  release.yml
data/: math_solver.db
data/agents/: basic_agent.json  classifier_agent.json  rag_agent.json  rag_correct_only.json
docs/: AI_MODEL_SERVICE.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_SERVICE.md  ELASTICSEARCH_STORAGE.md  EMBEDDING_SERVICE.md  IMPLEMENTATION_SUMMARY.md  MARIADB_INTEGRATION.md  PROJECT_OVERVIEW.txt  PYPI_PUBLISHING.md  PYPI_PUBLISHING_IMPLEMENTATION.md  QUALITY_IMPROVEMENTS.md  QUICKSTART.md  RELEASE_WORKFLOW.md  TEACHER_SERVICE.md  db_connection_retry_implementation.md
examples/: README.md  embedding_example.py
gradeschoolmathsolver/: config.py
gradeschoolmathsolver/web_ui/: app.py
scripts/: start.sh  validate-release-setup.sh
services/account/: __init__.py  service.py
services/agent/: service.py
services/agent_management/: service.py
services/classification/: __init__.py  service.py
services/database/: __init__.py  elasticsearch_backend.py  mariadb_backend.py  service.py
services/exam/: service.py
services/immersive_exam/: __init__.py  service.py
services/mistake_review/: service.py
services/qa_generation/: __init__.py  service.py
services/quiz_history/: service.py
services/teacher/: service.py
src/gradeschoolmathsolver/: __init__.py  config.py  model_access.py  models.py
src/gradeschoolmathsolver/web_ui/: app.py
tests/: test_basic.py  test_config_centralization.py  test_db_connection_retry.py  test_db_status_page.py  test_embedding_service.py  test_embedding_storage.py  test_enhancements.py  test_exam_service.py  test_immersive_exam.py  test_mariadb_user_separation.py  test_mistake_review.py  test_model_access.py  test_smoke_e2e.py  test_teacher_service.py
web_ui/: app.py
web_ui/templates/: agents.html  base.html  exam.html  immersive_exam_create.html  immersive_exam_live.html  immersive_exam_results.html  index.html  mistake_review.html  user_detail.html
(+37 files in other folders)
